--- a/rest-api-example/src/main/resources/application.properties
+++ b/rest-api-example/src/main/resources/application.properties
@@ -1,7 +1,19 @@
 #ms sql
+#spring.application.name = TestRestAPI
+#spring.datasource.url=jdbc:sqlserver://IS197\\SQLEXPRESS;databaseName=testground
+#spring.datasource.username=test_user
+#spring.datasource.password=Rochele123
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+
+#MySql - added to test with sql server instead of 
 spring.application.name = TestRestAPI
-spring.datasource.url=jdbc:sqlserver://IS197\\SQLEXPRESS;databaseName=testground
+spring.datasource.url=jdbc:mysql://localhost:3306/testground1?serverTimezone=UTC
 spring.datasource.username=test_user
 spring.datasource.password=Rochele123
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
