--- a/rest-api-example/src/main/resources/application.properties
+++ b/rest-api-example/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 spring.application.name = TestRestAPI
 spring.datasource.url=jdbc:mysql://localhost:3306/testground1?serverTimezone=UTC
 spring.datasource.username=test_user
-spring.datasource.password=Rochele123
+spring.datasource.password=Rochele123$
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
